# 250402

./: .gitignore  .gitmodules  build.zig  build.zig.zon  init.sh  run.sh
dummy/: CMakeLists.txt  dummy.c
src/: app.zig  main.zig  root.zig
